--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                 <div class="impact-number">5</div>
                 <div class="impact-text">
                     The number of people with special needs we've paid for work.<br>
-                    How many have you?
+                    How many have you worked with?
                 </div>
             </div>
             <!-- Additional sidebar content can be added here -->
